# OpenCV-rtsp-streamer

./: CMakeLists.txt  LICENSE  README.md  main.cpp  streamer.cpp  streamer.h
